--- a/styles/styles.css
+++ b/styles/styles.css
@@ -114,7 +114,7 @@ header .container {
 /* todo: import bootstrap used classes in a more fashioned way */
 @media (min-width:1200px) {
   .container {
-    max-width: 1140px;
+    max-width: 1200px;
   }
 }
 
@@ -308,6 +308,11 @@ main img {
 
 main {
   background-color: var(--background-color);
+}
+
+main .section {
+  padding-left: 15px;
+  padding-right: 15px;
 }
 
 main .default-content-wrapper {
